<resources>
    <string name="app_name">InfoQ</string>
    <string name="str_account_conf">Account conf</string>
    <string name="str_read_list">Read list</string>
    <string name="str_preference_conf">Preference conf</string>
    <string name="str_settings">Settings</string>
    <string name="str_about">About</string>
    <string name="str_logout">Logout</string>
    <string name="str_hot">Hot</string>
    <string name="str_block">Block</string>
</resources>
